Force border radius of 0 on search buttons, to ensure the button covers its whole container

--- a/resources/onyx-screen.css
+++ b/resources/onyx-screen.css
@@ -465,6 +465,7 @@ pre {
 	color: transparent !important;
 	background: transparent !important;
 	border: none !important;
+	border-radius: 0 !important;
 	margin: 0 !important;
 }
 
